# pikvm-rest-api

./: .gitignore  .pre-commit-config.yaml  README.md  pikvm-credentials.robot  pikvm_comm.py  pikvm_comm.robot  pikvm_test_cli.py  pyproject.toml  requirements.txt
pikvm/: client.py
tests/: cli.py
